# Semaforo-Inteligente-com-Acessibilidade

./: CMakeLists.txt  README.md  SemaforoInteligente.c
